[gd_scene load_steps=6 format=2]

[ext_resource path="res://components/graph/graph_view.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/circle_64.png" type="Texture" id=3]
[ext_resource path="res://components/graph/graph_navigator.gd" type="Script" id=5]
[ext_resource path="res://assets/grid.png" type="Texture" id=6]

[node name="GraphView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="GraphNavigator" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="MouseDragHint" type="Sprite" parent="GraphNavigator"]
visible = false
modulate = Color( 0.85098, 0.721569, 1, 0.156863 )
position = Vector2( 15, 10 )
texture = ExtResource( 3 )

[node name="Content" type="Node2D" parent="GraphNavigator"]

[node name="BG" type="TextureRect" parent="GraphNavigator/Content"]
visible = false
modulate = Color( 0.239216, 0.0901961, 0.431373, 0.278431 )
margin_left = -5120.0
margin_top = -5120.0
margin_right = 5120.0
margin_bottom = 5120.0
texture = ExtResource( 6 )
stretch_mode = 2

[node name="StepButton" type="Button" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 46.0
margin_bottom = 30.0
text = "recalculate layout"

[node name="Back" type="Button" parent="."]
margin_left = 6.0
margin_top = 43.0
margin_right = 47.0
margin_bottom = 67.0
text = "back"

[connection signal="pressed" from="StepButton" to="." method="_on_StepButton_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
